--- a/themes/responsiv-flat/assets/css/style.css
+++ b/themes/responsiv-flat/assets/css/style.css
@@ -53,8 +53,9 @@
 }
 .carousel-control.left,
 .carousel-control.right { 
-    margin-right: 40px;
-    margin-left: 32px; 
+    /*margin-right: 40px;
+    margin-left: 32px; */
+    width: 5%;
     background-image: none;
     opacity: 1;
 }
@@ -128,231 +129,138 @@
 .green {background: green;}
 
 .yellow {background: yellow;}
-
-
-/* e-carousel */
-#e-carousel.carousel {
-	margin: 50px auto;
-	padding: 0 70px;
-}
-#e-carousel.carousel .item {
-	min-height: 330px;
-    text-align: center;
-	overflow: hidden;
-}
-#e-carousel.carousel .item .img-box {
-	height: 160px;
-	width: 100%;
-	position: relative;
-}
-#e-carousel.carousel .item img {	
-	max-width: 100%;
-	max-height: 100%;
-	display: inline-block;
-	position: absolute;
-	bottom: 0;
-	margin: 0 auto;
-	left: 0;
-	right: 0;
-}
-#e-carousel.carousel .item h4 {
-	font-size: 18px;
-	margin: 10px 0;
-}
-#e-carousel.carousel .item .btn {
-	color: #333;
-    border-radius: 0;
-    font-size: 11px;
-    text-transform: uppercase;
-    font-weight: bold;
-    background: none;
-    border: 1px solid #ccc;
-    padding: 5px 10px;
-    margin-top: 5px;
-    line-height: 16px;
-}
-#e-carousel.carousel .item .btn:hover, .carousel .item .btn:focus {
-	color: #fff;
-	background: #000;
-	border-color: #000;
-	box-shadow: none;
-}
-#e-carousel.carousel .item .btn i {
-	font-size: 14px;
-    font-weight: bold;
-    margin-left: 5px;
-}
-#e-carousel.carousel .thumb-wrapper {
-	text-align: center;
-}
-#e-carousel.carousel .thumb-content {
-	padding: 15px;
-}
-#e-carousel.carousel .carousel-control {
-	height: 100px;
-    width: 40px;
-    background: none;
-    margin: auto 0;
-    background: rgba(0, 0, 0, 0.2);
-}
-#e-carousel.carousel .carousel-control i {
-    font-size: 30px;
-    position: absolute;
-    top: 50%;
-    display: inline-block;
-    margin: -16px 0 0 0;
-    z-index: 5;
-    left: 0;
-    right: 0;
-    color: rgba(0, 0, 0, 0.8);
-    text-shadow: none;
-    font-weight: bold;
-}
-#e-carousel.carousel .item-price {
-	font-size: 13px;
-	padding: 2px 0;
-}
-#e-carousel.carousel .item-price strike {
-	color: #999;
-	margin-right: 5px;
-}
-#e-carousel.carousel .item-price span {
-	color: #86bd57;
-	font-size: 110%;
-}
-#e-carousel.carousel .carousel-control.left i {
-	margin-left: -3px;
-}
-#e-carousel.carousel .carousel-control.left i {
-	margin-right: -3px;
-}
-#e-carousel.carousel .carousel-indicators {
-	bottom: -50px;
-}
-#e-carousel.carousel-indicators li, .carousel-indicators li.active {
-	width: 10px;
-	height: 10px;
-	margin: 4px;
-	border-radius: 50%;
-	border-color: transparent;
-}
-#e-carousel.carousel-indicators li {	
-	background: rgba(0, 0, 0, 0.2);
-}
-#e-carousel.carousel-indicators li.active {	
-	background: rgba(0, 0, 0, 0.6);
-}
-
-/*
-.carousel {
-	margin: 50px auto;
-	padding: 0 70px;
-}
-.carousel .item {
-	min-height: 330px;
-    text-align: center;
-	overflow: hidden;
-}
-.carousel .item .img-box {
-	height: 160px;
-	width: 100%;
-	position: relative;
-}
-.carousel .item img {	
-	max-width: 100%;
-	max-height: 100%;
-	display: inline-block;
-	position: absolute;
-	bottom: 0;
-	margin: 0 auto;
-	left: 0;
-	right: 0;
-}
-.carousel .item h4 {
-	font-size: 18px;
-	margin: 10px 0;
-}
-.carousel .item .btn {
-	color: #333;
-    border-radius: 0;
-    font-size: 11px;
-    text-transform: uppercase;
-    font-weight: bold;
-    background: none;
-    border: 1px solid #ccc;
-    padding: 5px 10px;
-    margin-top: 5px;
-    line-height: 16px;
-}
-.carousel .item .btn:hover, .carousel .item .btn:focus {
-	color: #fff;
-	background: #000;
-	border-color: #000;
-	box-shadow: none;
-}
-.carousel .item .btn i {
-	font-size: 14px;
-    font-weight: bold;
-    margin-left: 5px;
-}
-.carousel .thumb-wrapper {
-	text-align: center;
-}
-.carousel .thumb-content {
-	padding: 15px;
-}
-.carousel .carousel-control {
-	height: 100px;
-    width: 40px;
-    background: none;
-    margin: auto 0;
-    background: rgba(0, 0, 0, 0.2);
-}
-.carousel .carousel-control i {
-    font-size: 30px;
-    position: absolute;
-    top: 50%;
-    display: inline-block;
-    margin: -16px 0 0 0;
-    z-index: 5;
-    left: 0;
-    right: 0;
-    color: rgba(0, 0, 0, 0.8);
-    text-shadow: none;
-    font-weight: bold;
-}
-.carousel .item-price {
-	font-size: 13px;
-	padding: 2px 0;
-}
-.carousel .item-price strike {
-	color: #999;
-	margin-right: 5px;
-}
-.carousel .item-price span {
-	color: #86bd57;
-	font-size: 110%;
-}
-.carousel .carousel-control.left i {
-	margin-left: -3px;
-}
-.carousel .carousel-control.left i {
-	margin-right: -3px;
-}
-.carousel .carousel-indicators {
-	bottom: -50px;
-}
-.carousel-indicators li, .carousel-indicators li.active {
-	width: 10px;
-	height: 10px;
-	margin: 4px;
-	border-radius: 50%;
-	border-color: transparent;
-}
-.carousel-indicators li {	
-	background: rgba(0, 0, 0, 0.2);
-}
-.carousel-indicators li.active {	
-	background: rgba(0, 0, 0, 0.6);
-}
 */
+
+.crsl {
+	margin: 50px auto;
+	padding: 0 70px;
+}
+.crsl .item {
+	min-height: 330px;
+    text-align: center;
+	overflow: hidden;
+}
+.crsl .item .img-box {
+	height: 160px;
+	width: 100%;
+	position: relative;
+}
+.crsl .item img {	
+	max-width: 100%;
+	max-height: 100%;
+	display: inline-block;
+	position: absolute;
+	bottom: 0;
+	margin: 0 auto;
+	left: 0;
+	right: 0;
+}
+.crsl .item h4 {
+	font-size: 18px;
+	margin: 10px 0;
+}
+.crsl .item .btn {
+	color: #333;
+    border-radius: 0;
+    font-size: 11px;
+    text-transform: uppercase;
+    font-weight: bold;
+    background: none;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    margin-top: 5px;
+    line-height: 16px;
+}
+.crsl .item .btn:hover, .crsl .item .btn:focus {
+	color: #fff;
+	background: #000;
+	border-color: #000;
+	box-shadow: none;
+}
+.crsl .item .btn i {
+	font-size: 14px;
+    font-weight: bold;
+    margin-left: 5px;
+}
+.crsl .thumb-wrapper {
+	text-align: center;
+}
+.crsl .thumb-content {
+	padding: 15px;
+}
+.crsl .crsl-control {
+	height: 100px;
+    width: 40px;
+    background: none;
+    margin: auto 0;
+    background: rgba(0, 0, 0, 0.2);
+}
+.crsl .crsl-control i {
+    font-size: 30px;
+    position: absolute;
+    top: 50%;
+    display: inline-block;
+    margin: -16px 0 0 0;
+    z-index: 5;
+    left: 0;
+    right: 0;
+    color: rgba(0, 0, 0, 0.8);
+    text-shadow: none;
+    font-weight: bold;
+}
+.crsl .item-price {
+	font-size: 13px;
+	padding: 2px 0;
+}
+.crsl .item-price strike {
+	color: #999;
+	margin-right: 5px;
+}
+.crsl .item-price span {
+	color: #86bd57;
+	font-size: 110%;
+}
+.crsl .crsl-control.left i {
+	margin-left: -3px;
+}
+.crsl .crsl-control.left i {
+	margin-right: -3px;
+}
+.crsl .crsl-indicators {
+	bottom: -50px;
+}
+.crsl-indicators li, .crsl-indicators li.active {
+	width: 10px;
+	height: 10px;
+	margin: 4px;
+	border-radius: 50%;
+	border-color: transparent;
+}
+.crsl-indicators li {	
+	background: rgba(0, 0, 0, 0.2);
+}
+.crsl-indicators li.active {	
+	background: rgba(0, 0, 0, 0.6);
+}
+
+.black {
+    color: #000;
+}
+
+.black:hover {
+    color: red;
+    /*background-color: #000;*/
+}
+
+.carousel.control.left.crsl-prev, .carousel.control.right.crsl-next {
+    top: 50%;
+}
+
+.nav.nav-pills {
+    text-align: center;
+}
+
+.thumb-content > .title > a {
+    font-size: 20px;
+    color: black;
+}
