--- a/themes/responsiv-flat/assets/css/style.css
+++ b/themes/responsiv-flat/assets/css/style.css
@@ -70,10 +70,10 @@
     padding: 5px; 
     float: left;
  }
-
+/*
  .active > div { display:none; }
  .active > div:first-child { display:block; }
-
+*/
 /*xs*/
 @media (max-width: 767px) {
   .carousel-inner .active.left { left: -50%; }
