--- a/plugins/hilman/imageslider/components/imagelist/default.htm
+++ b/plugins/hilman/imageslider/components/imagelist/default.htm
@@ -1,23 +1,24 @@
-{% set caros = __SELF__.caros %}
+{% set caros = imagelist.caros %}
 
-{{ caros.images }}
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
     </ol>
     <div class="carousel-inner">
-        {% for caro in caros %}
-        <div class="item active">
-            <img src="https://demo.thembay.com/puca_ohio/wp-content/uploads/revslider/ohio-home-05/h5_slider_02.jpg" alt="Chania">
+        {% for index, caro in caros %}
+        <div class="item{% if loop.first %} active{% endif %}">
+            <img id="img_caros" src="{{ caro.img_caro.path }}"
+                 alt="Chania" class="img-responsive">
             <div class="carousel-caption fadeUp">
-                <h3>{{ caro.image }}</h3>
+                <h3>{{ caro.title }}</h3>
                 <p>{{ caro.description }}</p>
                 <a href="" class="btn btn-primary bulat">Cek Sekarang!</a>
             </div>
         </div>
         {% endfor %}
     </div>
+
     <a class="left carousel-control car1" href="#myCarousel" data-slide="prev">
         <span class="fa fa-arrow-left"></span>
         <span class="sr-only">Previous</span>
