--- a/plugins/hilman/imageslider/components/imagekanan/default.htm
+++ b/plugins/hilman/imageslider/components/imagekanan/default.htm
@@ -1,17 +1,13 @@
 {% set atas = imagekanan.atas %}
-{% set bkiri = imagekanan.bkiri %}
-{% set bkanan = imagekanan.bkanan %}
-
-{{ atas.position }}
-{{ bkiri.position }}
-{{ bkanan.position }}
+{% set bkiri = imagekanan.bawahkiri %}
+{% set bkanan = imagekanan.bawahkanan %}
 
 <div class="kanan">
     <div class="konten-atas atas">
         <a href=""><img src="https://demo.thembay.com/puca_ohio/wp-content/uploads/2018/03/h5_banner_01.jpg" alt="" style=""></a>
     </div>
     <div class="konten-bawah bawah">
-        <a href=""><img id="kiri" src="https://demo.thembay.com/puca_ohio/wp-content/uploads/2018/03/h5_banner_02.jpg" alt=""></a>
-        <a href=""><img id="kanan"src="https://demo.thembay.com/puca_ohio/wp-content/uploads/2018/03/h5_banner_03.jpg" alt=""></a>
+        <a href=""><img class="img-responsive" id="kiri" src="{{ bkiri.img_kanan.path }}" alt="{{ bkiri.name }}"></a>
+        <a href=""><img class="img-responsive" id="kanan"src="{{ bkanan.img_kanan.path}}" alt="{{ bkanan.name }}"></a>
     </div>
 </div>
