--- a/plugins/hilman/imageslider/components/imagekanan/default.htm
+++ b/plugins/hilman/imageslider/components/imagekanan/default.htm
@@ -4,7 +4,7 @@
 
 <div class="kanan">
     <div class="konten-atas atas">
-        <a href=""><img src="https://demo.thembay.com/puca_ohio/wp-content/uploads/2018/03/h5_banner_01.jpg" alt="" style=""></a>
+        <a href=""><img src="{{ atas.img_kanan.path }}" alt="" style=""></a>
     </div>
     <div class="konten-bawah bawah">
         <a href=""><img class="img-responsive" id="kiri" src="{{ bkiri.img_kanan.path }}" alt="{{ bkiri.name }}"></a>
