--- a/plugins/hilman/imageslider/components/imagelist/default.htm
+++ b/plugins/hilman/imageslider/components/imagelist/default.htm
@@ -2,8 +2,9 @@
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
+        {% for in, caro in caros %}
+        <li data-target="#myCarousel" data-slide-to="{{ in }}" class="{% if loop.first %}active{% endif %}"></li>
+        {% endfor %}
     </ol>
     <div class="carousel-inner">
         {% for index, caro in caros %}
@@ -18,7 +19,7 @@
         </div>
         {% endfor %}
     </div>
-
+    {% if caros > 0 %}
     <a class="left carousel-control car1" href="#myCarousel" data-slide="prev">
         <span class="fa fa-arrow-left"></span>
         <span class="sr-only">Previous</span>
@@ -27,4 +28,5 @@
         <span class="fa fa-arrow-right"></span>
         <span class="sr-only">Next</span>
     </a>
+    {% endif %}
 </div>
