--- a/plugins/hilman/imageslider/components/imagelist/default.htm
+++ b/plugins/hilman/imageslider/components/imagelist/default.htm
@@ -19,6 +19,7 @@
         </div>
         {% endfor %}
     </div>
+    {% if caros|length > 1 %}
     <a class="left carousel-control car1" href="#myCarousel" data-slide="prev">
         <span class="fa fa-arrow-left"></span>
         <span class="sr-only">Previous</span>
@@ -27,4 +28,5 @@
         <span class="fa fa-arrow-right"></span>
         <span class="sr-only">Next</span>
     </a>
+    {% endif %}
 </div>
