--- a/themes/responsiv-flat/layouts/default.htm
+++ b/themes/responsiv-flat/layouts/default.htm
@@ -92,6 +92,9 @@ description = "Default layout"
             
             'assets/javascript/app.js'
         ]|theme }}"></script>
+        <!-- tambahan -->
+        <script id="domain" data-name="2469076" type="text/javascript" src="http://mark3.reinovasi.id/js/analytics_js/client.js"></script>
+        <!-- ------ -->
         <script>
         	videojs.options.flash.swf = "{{ 'assets/vendor/flat-ui/js/video-js.swf'|theme }}";
         </script>
