--- a/themes/responsiv-flat/assets/css/style.css
+++ b/themes/responsiv-flat/assets/css/style.css
@@ -1,9 +1,16 @@
+/* section */
+
+#sec_1, #sec_1 > .container, #sec_1 > .row {
+    height: 88vh;
+    /*background-color: #7da8c3 !important;*/
+}
+
 /* penyempurnaan */
 .row > .col-md-6 {
     padding-left: 5px;
 }
 #myCarousel.carousel, .kanan {
-    height: 53rem;
+    height: 88vh;
 }
 
 .konten-atas {
@@ -21,7 +28,7 @@
 
 img#img_caros.img-responsive {
     /*max-height: 525px;*/
-    height: 525px;
+    height: 85vh;
     width: 100%;
 }
 
@@ -31,7 +38,7 @@ img#img_caros.img-responsive {
 
 .konten-bawah > a > img {
     width: 100%;
-    height: 92%;
+    height: 93%;
 }
 
 .atas {
@@ -40,7 +47,8 @@ img#img_caros.img-responsive {
 
 .bawah {
     padding-top: 10px;
-    padding-bottom:40px;
+    height:50%;
+    /*padding-bottom:40px;*/
 }
 
 #kiri {
