--- a/themes/responsiv-flat/partials/footer.htm
+++ b/themes/responsiv-flat/partials/footer.htm
@@ -2,24 +2,24 @@
     <nav class="pull-left">
         <ul>
             <li class="active">
-                <a href="#">Home</a>
+                <a href="/">Home</a>
             </li>
             <li>
-                <a href="#">Company</a>
+                <a href="produk">Produk</a>
             </li>
             <li>
-                <a href="#">Portfolio</a>
+                <a href="blog">Blog</a>
             </li>
             <li>
-                <a href="#">Blog</a>
+                <a href="about-us">Tentang Kami</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="contact-us">Hubungi Kami</a>
             </li>
         </ul>
     </nav>
     <div class="social-btns pull-right">
-        <a href="#"><div class="fui-vimeo"></div><div class="fui-vimeo"></div></a>
+        <a href="#"><div class="fui-instagram"></div><div class="fui-instagram"></div></a>
         <a href="#"><div class="fui-facebook"></div><div class="fui-facebook"></div></a>
         <a href="#"><div class="fui-twitter"></div><div class="fui-twitter"></div></a>
     </div>
