--- a/themes/responsiv-flat/assets/css/style.css
+++ b/themes/responsiv-flat/assets/css/style.css
@@ -281,6 +281,11 @@ img#img_caros.img-responsive {
     padding-left: 60px;
 }
 
+.crsl .thumb-wrapper-3 {
+    /*text-align: center;*/
+    padding-left: 80px;
+}
+
 /*.thumb-wrapper-2 {*/
     /*position: relative;*/
     /*!*padding-left: 70px;*!*/
