new update pagi

--- a/themes/responsiv-flat/layouts/default.htm
+++ b/themes/responsiv-flat/layouts/default.htm
@@ -3,7 +3,7 @@ description = "Default layout"
 <!DOCTYPE html>
 <html>
     <head>
-    	<meta charset="UTF-8">
+    	<meta content="text/plain" charset="UTF-8">
         <title>Flat UI - {{ this.page.title }}</title>
         <meta name="title" content="{{ this.page.meta_title }}">
         <meta name="description" content="{{ this.page.meta_description }}">
