--- a/themes/responsiv-flat/partials/nav.htm
+++ b/themes/responsiv-flat/partials/nav.htm
@@ -44,7 +44,7 @@
                     </li>
                     <li class=" ">
                         <a href="/blog" class="">
-                            About Us
+                            Blog
                         </a>
                     </li>
                     <li class=" ">
